<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Testing App For ABS</string>

    <string name="title_activity_latency">Latency Test</string>
    <string name="title_activity_events">Events Test</string>
    <string name="title_activity_services">Multiple Services Test</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="button_send">Send</string>
    <string name="start_button">Start</string>
    <string name="check_button">Check</string>
    <string name="start_meas_service_button">Start MEASURING service</string>
    <string name="start_consumer_service_button">Start CONSUMER service</string>

    <string name="consumer_service_text">Click the above button to start a service that toggles a
        digital pin.</string>
    <string name="meas_service_text">Click the above button to start a service that performs a
        latency test.</string>
    <string name="services_test_tips">\n\nProcedure: click the consumer button several
        times and then finally click just ONCE the measuring button.</string>
    <string name="started_services">\nYou have started this services: </string>

    <string name="service_started">Service has started</string>
    <string name="latency_value_label">Click the button below to start the test</string>

</resources>
