<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:baselineAligned="false"
              tools:context=".ServicesActivity" >

    <Button
        android:id="@+id/run_consumer_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_consumer_service_button"
        android:layout_gravity="center_horizontal"
        android:onClick="onConsumerButtonClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consumer_service_text" />

    <Button
        android:id="@+id/run_meas_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_meas_service_button"
        android:layout_gravity="center_horizontal"
        android:onClick="onMeasButtonClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meas_service_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/services_test_tips" />

    <TextView
        android:id="@+id/started_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/started_services" />

    <TextView
        android:id="@+id/test_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>
